# FormacioAgents

./: .gitignore  00_setup.ipynb  00_setup_crewai.ipynb  README.md  pyproject.toml
formacioagents/: 01_conceptes_CrewAI.ipynb  01_conceptes_OpenAISDK.ipynb  01_conceptes_fonamentals.ipynb  02_tools_CrewAI.ipynb  03_cas_practic_CrewAI.ipynb  03_cas_practic_part2.ipynb  Bill_of_Materials-TESTBOM.xls
notebooks/: 01_conceptes_CrewAI.ipynb  02_tools_CrewAI.ipynb  03_cas_practic_CrewAI.ipynb  04_demo_executiva_CrewAI.ipynb  Bill_of_Materials-TESTBOM.xlsx  __init__.py  token.pickle
