[project]
name = "FormacioAgents"
version = "0.1.0"
description = "Formació d'Agents d'IA per l'equip de R+D de JCM Technologies"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.25.0",
    "ipython>=8.12.0",
    "requests>=2.31.0",
    "gradio>=4.0.0",
    "pytest>=7.4.0",
    "openai-agents>=0.6.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
