[project]
name = "formacioagents"
version = "1.0.0"
description = "Formació d'Agents d'IA amb CrewAI i Google Gemini - JCM Technologies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "JCM Technologies - Departament de R+D" }
]

dependencies = [
    # CrewAI - Framework per agents col·laboratius
    "crewai>=0.80.0",
    "crewai-tools>=0.12.0",
    
    # Google Gemini - Models d'IA de Google (nou SDK)
    "google-genai>=0.1.0",
    
    # Utilitats essencials
    "python-dotenv>=1.0.0",
    
    # Jupyter i notebooks
    "ipykernel>=6.25.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    
    # Processament de dades
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    
    # Altres dependències útils
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["formacioagents"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
